codepkg/objects/Account_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account of the Contractor</description>
        <inlineHelpText>Account of the Contractor</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWMP_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CWMP Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWMP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CWMP Project</label>
        <referenceTo>CWMP_Project__c</referenceTo>
        <relationshipLabel>Account Roles</relationshipLabel>
        <relationshipName>Account_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Amount__c</fullName>
        <label>Current Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Amount__c</fullName>
        <label>Original Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <description>Required when setting the Project Stage to “Tri-Party Agreement Finalized”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Point of Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Completed_Date__c</fullName>
        <description>Date Contractor Reported SOW was Completed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Contractor Reported SOW was Completed</inlineHelpText>
        <label>SOW Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_change_order_requested__c</fullName>
        <label>Was a change order requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_draw_requested__c</fullName>
        <label>Was a draw requested?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <label>Account Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CWMP_Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Account Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <recordTypes>
        <fullName>CWMP</fullName>
        <active>true</active>
        <label>CWMP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CWMP_Sharing__c</fullName>
        <label>CWMP Sharing</label>
    </sharingReasons>
</CustomObject>